# disarm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  BINDINGS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_UPGRADES.md  Dockerfile  HANDOFF.md  README.md  RELEASING.md  SECURITY.md  THREAT_MODEL.md  build.rs  measurements.jsonl  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  cache-cleanup.yml  ci.yml  codeql.yml  conversations-resolved.yml  dco.yml  dependency-audit.yml  docker.yml  docs.yml  perf-gate.yml  publish-node.yml  publish-ruby.yml  publish-translit-rs.yml  publish.yml  secret-scan.yml  tier3.yml
benchmarks/: README.md  bench_core.rs  bench_fresh_string.py  bench_iai.rs  bench_personas.rs  bench_pyperf.py  bench_quick.py  bench_slugify.py  bench_transliterate.py  bench_vs_unidecode.py  diff_vs_unidecode.py  results_criterion.txt  results_quick.txt  results_slugify.txt  results_transliterate.txt  results_vs_unidecode.txt
benchmarks/adversarial_eval/: README.md  corpora.py  metrics.py
bindings/node/: .gitignore  Cargo.toml  README.md  biome.json  index.ts  package-lock.json  package.json  tsconfig.json
bindings/node/__test__/: disarm.test.mjs  surrogate.test.mjs
bindings/node/src/: lib.rs
bindings/ruby/: .gitignore  .rubocop.yml  Cargo.toml  README.md  Rakefile  disarm.gemspec
bindings/ruby/ext/disarm/: Cargo.toml  extconf.rb
bindings/ruby/ext/disarm/src/: lib.rs
bindings/ruby/lib/: disarm.rb
bindings/ruby/lib/disarm/: version.rb
bindings/ruby/spec/: disarm_spec.rb  spec_helper.rb  surrogate_spec.rb
data/: confusables_supplement.tsv
docs/: BINDINGS.md  RUST_API.md  _index_nav.md  benchmarks.md  cli.md  conftest.py  contributing.md  data-engineer-guide.md  docker.md  formal-verification.md  index.md  librarian-guide.md  limitations.md  ml-pipeline-guide.md  performance.md  policy-templates.md  reference.md  requirements.txt  scholarly-guide.md  security-guide.md  web-developer-guide.md
docs/api/: classes.md  encoding.md  enums.md  exceptions.md  graphemes.md  index.md  language-profiles.md  pipelines.md  predicates.md  transforms.md
docs/architecture/: data-tables.md  emoji-engine.md  emoji-plugins.md  performance.md  pipeline.md  security.md  testing-guarantees.md  transliteration-comparison.md  transliteration-engine.md
docs/concepts/: which-function.md
docs/migration/: from-anyascii.md  from-confusable-homoglyphs.md  from-pathvalidate.md  from-python-slugify.md  from-unidecode.md  index.md  unidecode-recipes.md
docs/node/: api.md  getting-started.md
docs/plans/: 2026-03-26-language-discriminators.md
docs/python/: getting-started.md
docs/reviews/: 2026-06-17-hardening-pass.md  2026-06-18-hardening-pass-deep.md  2026-06-18-hardening-pass-delta.md
docs/ruby/: api.md  getting-started.md
docs/rust/: getting-started.md
docs/security/: adversarial-defense.md
docs/user-guide/: abjad-transliteration.md  anomaly-detection.md  confusables.md  filenames.md  getting-started.md  graphemes.md  language-detection.md  language-support.md  llm-pipelines.md  normalization.md  normalize-first.md  pipeline.md  slugification.md  text-cleaning.md  tokenizer-preprocessing.md  transliteration.md
examples/: perf_workload.rs  rust_quickstart.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: canonicalize.rs  canonicalize_strict.rs
path/to/: RELEASING.md
proptest-regressions/: case_fold.txt  confusables.txt  presets.txt
python/disarm/: __init__.py  _api.py  _boundary.py  _boundary.pyi  _compat.py  _core.pyi  _presets.py  _text.py  _text.pyi  has_anomalies.py  security.py
python/translit/: __init__.py  __init__.pyi  __main__.py  _api.py  _compat.py  _compat.pyi  _enums.py  _enums.pyi  _presets.py  _text.py  _text.pyi  _translit.pyi  _types.py  _types.pyi  codec.py  files.py  normalization.py  security.py
requirements/: bench.txt
scripts/: audit_dependencies.py  bootstrap_dicts.sh  build_persian_dict.py  check_doc_claims.py  check_doc_node_examples.mjs  check_doc_ruby_examples.rb  check_doc_rust_examples.py  extract_phf_data.py  gen_confusables.py  gen_emoji_data.py  gen_excluded_compositions.py  gen_metadata.py  generate_docs_index.sh  parity.py  parity_check.py  parity_runtime.py  perf_lint.sh  run_doc_tests.py
src/: anomalies.rs  api.rs  case_fold.rs  compose.rs  confusables.rs  context.rs  emoji.rs  encoding.rs  error.rs  fastpath.rs  filename.rs  grapheme.rs  hostname.rs  invisibles.rs  lib.rs  log_injection.rs  metadata.rs  normalize.rs  obs.rs  pipeline.rs  presets.rs  reverse.rs  scripts.rs  slugify.rs  transliterate.rs  unicode_ranges.rs  utils.rs  whitespace.rs  width.rs  zalgo.rs
src/api/: metadata.rs  mod.rs  (+4 more)
tests/: api_idioms.rs  api_pure_rust.rs  api_surface_contract.rs  conftest.py  exhaustive_grapheme.rs  exhaustive_transliterate.rs  hot_path_guard.rs  integration_confusables.rs  integration_emoji.rs  integration_slugify.rs  integration_transliterate.rs  integration_transliterate_abjad.rs  integration_transliterate_cjk.rs  integration_transliterate_european.rs  integration_transliterate_indic.rs  integration_whitespace.rs  log_injection_no_recursion.rs  logging.rs  preset_alloc_count.rs  test_adversarial_eval.py  test_adversarial_oracle.py  test_adversarial_oracle_2.py  test_ancient_scripts.py  test_anomalies.py  test_api_stability.py  test_attack_corpus.py  test_awesome_slugify_compat.py  test_batch_consistency.py  test_bug_confusable_ordering.py  test_bug_greek_confusables.py  test_bug_regressions.py  test_cached_transliterator.py  test_case_folding.py  test_cjk_transliteration.py  test_compat.py  test_concurrency.py  test_confusable_coverage.py  test_confusables.py  test_confusables_cross_script.py  test_confusables_form_invariance.py  (+44 more)
(+61 files in other folders)
