[package]
name = "disarm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
unicode-normalization = "0.1"

# Pure-Rust build of the core (no PyO3 extension-module linkage).
[dependencies.disarm]
path = ".."
default-features = false

[[bin]]
name = "strip_obfuscation"
path = "fuzz_targets/strip_obfuscation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canonicalize"
path = "fuzz_targets/canonicalize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canonicalize_strict"
path = "fuzz_targets/canonicalize_strict.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_confusables"
path = "fuzz_targets/normalize_confusables.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
