# Ruby (magnus) native extension for the disarm Unicode text-security core (#45).
#
# This is a *binding crate*, not published to crates.io — it is compiled into the
# `disarm` RubyGem by rake-compiler/rb-sys. It wraps the pure-Rust `disarm` core
# (no pyo3) and exposes an idiomatic `Disarm` Ruby module. It is a member of the
# gem-root workspace (../../Cargo.toml) so rb-sys's `cargo metadata` resolves here
# rather than walking up to the repo-root core crate.
#
# Named `disarm` (matching the gem / lib / loader) but pinned to version 0.0.0,
# distinct from the `disarm` core (0.10) it depends on — two same-named crates of
# different versions coexist in the lockfile; same name + same version would not.
[package]
name = "disarm"
version = "0.0.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "Ruby bindings for disarm — Unicode confusable/text-security building blocks"
publish = false

[lib]
# Output the `disarm` shared object the gem's `require "disarm/disarm"` loads.
# The core is imported under the alias `disarm_core` (see [dependencies]) so the
# `disarm_core::` paths in src never clash with this crate's own `disarm` name.
name = "disarm"
crate-type = ["cdylib"]

[dependencies]
# The pure-Rust core from crates.io (default features = pyo3-free). A registry
# dep — not a path — so the gem is self-contained and the rb-sys-dock cross-gem
# build (which mounts only this gem dir) can fetch it. Imported as `disarm_core`
# because the package name `disarm` would otherwise clash with this crate.
disarm_core = { package = "disarm", version = "0.11", default-features = false }
# magnus: ergonomic, safe Ruby<->Rust bindings over rb-sys. 0.8 supports Ruby >= 3.0
# (the gem's required_ruby_version); rb-sys handles the platform glue.
magnus = "0.8"
